[tool.poetry]
name = "ucb-ml-course"
version = "0.1.0"
description = ""
authors = ["Shashwat Srivastava"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.5"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
